libmpdclient 2.23 (not yet released)
* support MPD protocol 0.24.0
  - allow window for listplaylist and listplaylistinfo
  - command "playlistlength", "stickertypes", "searchplaylist"
  - tag "ShowMovement"
  - new sticker find api
* Support open end for mpd_search_add_window

libmpdclient 2.22 (2023/12/22)
* drop the unmaintained Vala bindings
* fix "version.h" conflicts when used as a Meson subproject
* support MPD protocol 0.24.0
  - command "save [create|replace|append]"

libmpdclient 2.21 (2023/12/20)
* meson.build: allow using as a Meson subproject
* add mpd_recv_replay_gain_status()
* support MPD protocol 0.24.0
  - tag "Mood", "TitleSort"
  - "oneshot" consume state
  - allow range in "playlistmove"
  - commands "searchcount", "stickernames"
  - added attribute for songs
  - search: support constraint "added-since"

libmpdclient 2.20 (2021/11/23)
* support MPD protocol 0.23
  - getvol
  - position argument for searchadd, findadd, load and playlistadd
  - whence argument for addid and add
  - range argument for playlistdelete
* support MPD protocol 0.22.4
  - binarylimit
* support MPD protocol 0.22.0
  - readpicture
* support MPD protocol 0.21.0
  - albumart
* support tags "ComposerSort", "Ensemble", "Movement",
  "MovementNumber", "Location"
* queue: make "priority" parameter unsigned

libmpdclient 2.19 (2020/07/03)
* fix off-by-one bug in MPD_HOST parser
* add function mpd_lookup_replay_gain_mode()
* playlist: add function mpd_run_playlist_move()
* identify messages with length over the buffer limit
* support MPD protocol 0.16
 - replay gain
* support MPD protocol 0.19
 - idle events "neighbor" and "mount"
* support MPD protocol 0.20
 - rangeid
* support MPD protocol 0.21
  - command "tagtypes all"

libmpdclient 2.18 (2020/01/20)
* more out-of-memory checks
* partition: add mpd_recv_partition()
* support MPD protocol 0.21
 - "oneshot" single state
* support MPD protocol 0.22
 - status: add mpd_status_get_partition()